LLM agent success!

--- a/src/AkkaAgents/AkkaAgents.csproj
+++ b/src/AkkaAgents/AkkaAgents.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Scripts/*.py">
+    <None Update="Scripts/**">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
